fixed form btns on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -257,6 +257,11 @@ form .form-btns {
   flex-direction: row;
   justify-content: space-between;
 }
+@media (max-width: 750px) {
+  form .form-btns {
+    flex-direction: column;
+  }
+}
 form .form-btns .btn {
   font-size: 1.3rem;
   padding: 1em;
@@ -282,6 +287,9 @@ form .form-btns .btn:hover {
 @media (max-width: 750px) {
   form .form-btns .btn {
     width: 100%;
+  }
+  form .form-btns .btn:last-of-type {
+    margin-top: 20px;
   }
 }
 footer {
